@@ -6,7 +6,7 @@
 ;; Author: Shun-ichi GOTO  <gotoh@taiyo.co.jp>,
 ;;         Hideyuki SHIRAI <shirai@meadowy.org>
 ;; Created: Wed Feb 28 03:31:00 2001
-;; Version: $Revision: 1.57 $
+;; Version: $Revision: 1.58 $
 ;; Keywords: Mew, mail, w3m, WWW, hypermedia
 
 ;; This file is a part of emacs-w3m.
@@ -280,39 +280,77 @@ This variable is effective only in XEmacs, Emacs 21 and Emacs 22."
 	(message "Download: %s...failed" name))
       (sit-for 1))))
 
-(defun w3m-mail-compose-with-mew (source url charset to subject other-headers)
+(defun w3m-mail-compose-with-mew (source url charset content-type
+					 to subject other-headers)
   "Compose a mail using Mew."
   (mew-user-agent-compose to subject other-headers) ;; for mew-temp-dir init
   (save-excursion
     (let* ((basename (file-name-nondirectory (w3m-url-strip-query url)))
-	   (filename (expand-file-name (cond
-					((string-match "^[\t ]*$" basename)
-					 "index.html")
-					((string-match "html?$" basename)
-					 basename)
-					(t
-					 (concat basename ".html")))
-				       mew-temp-dir))
+	   (ct (downcase  content-type))
 	   (mew-attach-move-next-after-copy nil)
-	   cs)
+	   filename cs)
+      ;; Application/.*xml is not inline view with Mew.
+      (when (string-match "^application/.*xml$" ct)
+	(setq ct "text/xml"))
+      (setq filename (expand-file-name (cond
+					((and (string-match "^[\t ]*$" basename)
+					      (string= ct "text/html"))
+					 "index.html")
+					((string-match "^[\t ]*$" basename)
+					 "dummy")
+					(t
+					 basename))
+				       mew-temp-dir))
       (when charset
 	(setq charset (symbol-name charset)))
       (with-temp-buffer
-	(insert source)
-	(setq cs (or (w3m-static-if (fboundp 'mew-text/html-detect-cs)
-			 (mew-text/html-detect-cs (point-min) (point-max)))
-		     (and charset (mew-charset-to-cs charset))
-		     mew-cs-autoconv))
-	(if (eq cs mew-cs-autoconv)
-	    (setq charset (mew-charset-guess-region (point-min) (point-max)))
-	  (setq charset (mew-cs-to-charset cs)))
+	(setq cs
+	      (cond
+	       ((or (string= "text/html" ct)
+		    (string= "text/xml" ct))
+		(insert source)
+		(or (w3m-static-if (fboundp 'mew-text/html-detect-cs)
+			(mew-text/html-detect-cs (point-min) (point-max)))
+		    mew-cs-autoconv))
+	       ((string-match "^text/" ct)
+		(insert source)
+		mew-cs-autoconv)
+	       (t
+		(mew-set-buffer-multibyte nil)
+		(insert source)
+		mew-cs-binary)))
+	(setq charset (cond
+		       ((eq cs mew-cs-autoconv)
+			(mew-charset-guess-region (point-min) (point-max)))
+		       ((eq cs mew-cs-binary)
+			nil)
+		       (t
+			(mew-cs-to-charset cs))))
 	(mew-frwlet
 	 mew-cs-text-for-read cs
 	 (write-region (point-min) (point-max) filename nil 'nomsg)))
-      (unless (mew-attach-p) (mew-draft-prepare-attachments))
+      (when ct
+	(setq ct (mew-capitalize ct)))
+      (unless (mew-attach-p)
+	(mew-draft-prepare-attachments))
       (if (not (mew-attach-not-line012-1))
 	  (message "Can not attach from emacs-w3m here!")
 	(mew-attach-copy filename (file-name-nondirectory filename))
+	;; content-type set
+	(let* ((nums (mew-syntax-nums))
+	       (syntax (mew-syntax-get-entry mew-encode-syntax nums))
+	       (file (mew-syntax-get-file syntax))
+	       (ctl (mew-syntax-get-ct syntax))
+	       (ct-orig (mew-syntax-get-value ctl 'cap))
+	       cte)
+	  (unless (string= ct ct-orig)
+	    (setq ctl (list ct))
+	    (mew-syntax-set-ct syntax ctl)
+	    (setq cte (mew-ctdb-cte (mew-ctdb-by-ct ct)))
+	    (mew-syntax-set-cte syntax cte)
+	    (mew-syntax-set-cdp syntax (mew-syntax-cdp-format ct file))
+	    (mew-encode-syntax-print mew-encode-syntax)))
+	;; charset set
 	(let* ((nums (mew-syntax-nums))
 	       (syntax (mew-syntax-get-entry mew-encode-syntax nums))
 	       (file (mew-syntax-get-file syntax))
@@ -320,20 +358,13 @@ This variable is effective only in XEmacs, Emacs 21 and Emacs 22."
 	       (ct (mew-syntax-get-value ctl 'cap))
 	       (params (mew-syntax-get-params ctl))
 	       (icharset "icharset")
-	       (ocharset "charset")
-	       cte)
-	  (unless (string= "Text/Html" ct)
-	    (setq ct "Text/Html")
-	    (setq ctl (list ct))
-	    (mew-syntax-set-ct syntax ctl)
-	    (setq cte (mew-ctdb-cte (mew-ctdb-by-ct ct)))
-	    (mew-syntax-set-cte syntax cte)
-	    (mew-syntax-set-cdp syntax (mew-syntax-cdp-format ct file)))
-	  (setq params (mew-delete icharset params))
-	  (setq params (cons (list icharset charset) params))
-	  (setq params (mew-delete ocharset params))
-	  (setq ctl (cons ct (cons (list ocharset charset) params)))
-	  (mew-syntax-set-ct syntax ctl)
+	       (ocharset "charset"))
+	  (when (and (string-match "^Text" ct) charset)
+	    (setq params (mew-delete icharset params))
+	    (setq params (cons (list icharset charset) params))
+	    (setq params (mew-delete ocharset params))
+	    (setq ctl (cons ct (cons (list ocharset charset) params)))
+	    (mew-syntax-set-ct syntax ctl))
 	  (mew-syntax-set-cd syntax url)
 	  (mew-encode-syntax-print mew-encode-syntax))
 	(message "Compose a mail using Mew with %s...done" url))
